# Projeto_dissertacao

./: .env  .env.example  .gitignore  README.md  experimento-ur3.ttt  pyproject.toml  resumo_arquitetura_orquestrador.txt
src/orquestrador/: config.py
src/orquestrador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/orquestrador/adapters/: log_system.py
src/orquestrador/adapters/gui/: window.py
src/orquestrador/app/: simulation.py
src/orquestrador/domain/: models.py
src/orquestrador/services/: orchestrator.py
tests/: test_geometry.py  test_orchestrator.py
