[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orquestrador"
version = "0.1.0"
description = "UR3 orchestrator with Gemini Robotics"
requires-python = ">=3.11"

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.1.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
